fixed form button and units of measurement

--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
                     </input>
                         <input type="text" name="coment" placeholder="Some Comment">
                    </input>
+                    <div class="buttonLayout">
+                        <button type="submit"> Send My Postcard </button>
+                    </div>
                 </form>
             </section>
-            <footer>
-                <button type="submit"> Send My Postcard </button>
-            </footer>
         </div>
    </body>
 </html>
